[gd_scene load_steps=4 format=3 uid="uid://d1gn5qpmmtxpx"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_rqsdm"]
[ext_resource type="Texture2D" uid="uid://q5ym2g12iw2d" path="res://assets/user_interface/Mars_Space_Planet-Universe_HD_Wallpaper_1366x768.jpg" id="1_tymvm"]
[ext_resource type="FontFile" uid="uid://cfs0yuxhvbily" path="res://assets/user_interface/fonts/Warzone.ttf" id="3_4bt6m"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqsdm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1366.0
offset_bottom = 768.0
scale = Vector2(0.844445, 0.844445)
texture = ExtResource("1_tymvm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separador" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("3_4bt6m")
theme_override_font_sizes/font_size = 64
text = "P.A.T.R.O in Mars"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 18

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Separador2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(270, 38)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4bt6m")
text = "New Game
"

[node name="Separador3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(270, 38)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4bt6m")
text = "HISTORY
"

[node name="Separador4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(270, 38)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4bt6m")
text = "EXIT
"
